--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: customer-service
   h2:
     console:
       enabled: true
@@ -12,3 +14,7 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
 server:
   port: 8090
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
